# pm

./: AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  ai_service.py  crud.py  database.py  kanban.db  main.py  models.py  pyproject.toml  schemas.py  test.db
backend/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_api.py
docs/: DATABASE.md  PLAN.md  code_review.md
frontend/: AGENTS.md  package-lock.json  package.json  screenshot.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AIChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  Login.test.tsx  Login.tsx  NewCardForm.tsx
frontend/src/lib/: kanban.test.ts  kanban.ts
frontend/test-results/: .last-run.json
frontend/test-results/auth-login-and-logout-flow-chromium/: error-context.md
frontend/test-results/kanban-moves-a-card-between-columns-chromium/: error-context.md
frontend/tests/: auth.spec.ts  kanban.spec.ts
scripts/: start.sh  stop.sh
